Fix: referral qr code not showing up in full screen Chore: cleanup code

--- a/src/globals.css
+++ b/src/globals.css
@@ -120,242 +120,3 @@ body {
   font-family: "LuckiestGuy", sans-serif;
   font-weight: 300;
 }
-
-.nav-item {
-  background: radial-gradient(
-    196.39% 88.02% at 49.98% 88.02%,
-    rgba(60, 185, 252, 0.5) 0%,
-    rgba(138, 43, 226, 0.5) 100%
-  );
-  display: block;
-  cursor: pointer;
-  text-transform: uppercase;
-  transition: all 0.3s ease;
-}
-
-.nav-item:hover {
-  background: radial-gradient(
-    196.39% 88.02% at 49.98% 88.02%,
-    rgba(60, 185, 252, 0.5) 0%,
-    #ffffff 100%
-  );
-}
-
-.nav-item:active {
-  background: radial-gradient(
-    196.39% 88.02% at 49.98% 88.02%,
-    #7e8087 0%,
-    #646464 100%
-  );
-}
-
-.nav-left {
-  clip-path: polygon(0 0, 90% 0, 100% 100%, 10% 100%);
-}
-.nav-right {
-  clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%);
-}
-
-.primary-btn {
-  text-transform: uppercase;
-  /* text-decoration: underline; */
-  clip-path: polygon(80% 0, 100% 50%, 100% 100%, 0 100%, 0 0);
-  color: #111111;
-  filter: drop-shadow(0px 0px 34px rgba(153, 238, 45, 0.3));
-}
-
-#login {
-  border: 1px solid transparent;
-  transition: all 0.3s ease;
-}
-
-#login:hover {
-  border: 1px solid #b537f2;
-  clip-path: none;
-}
-
-#nft-shadow-1 {
-  box-shadow: 0px 0px 15px 0px #ff9900;
-}
-
-#nft-shadow-2 {
-  box-shadow: 0px 0px 15px 0px #fc3c3c;
-}
-
-#nft-shadow-3 {
-  box-shadow: 0px 0px 15px 0px #11ca00;
-}
-
-.swiper {
-  width: 100%;
-  height: 100%;
-}
-
-.swiper-slide {
-  text-align: center;
-  font-size: 18px;
-  background: #fff;
-  width: 20% !important;
-  height: 20%;
-  /* Center slide text vertically */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.swiper-slide-active {
-  border: 4px solid #b537f2 !important;
-}
-
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.footer-box {
-  clip-path: polygon(90% 0, 100% 10%, 100% 100%, 0 100%, 0 0);
-}
-
-#login-card {
-  border-radius: 20px;
-  border: 1px solid var(--Glass1-Stroke-Carey, #afafaf);
-
-  background: linear-gradient(
-      321deg,
-      rgba(191, 191, 191, 0.06) 5.98%,
-      rgba(0, 0, 0, 0) 66.28%
-    ),
-    rgba(0, 0, 0, 0.14);
-
-  box-shadow: -8px 4px 5px 0px rgba(0, 0, 0, 0.24);
-  backdrop-filter: blur(26.5px);
-}
-
-#login-form-btn {
-  background: linear-gradient(
-    91deg,
-    #628eff 9.91%,
-    #8740cd 53.29%,
-    #580475 91.56%
-  );
-}
-
-#login-form-btn:disabled {
-  background: linear-gradient(
-    91deg,
-    #628eff 9.91%,
-    #8740cd 53.29%,
-    #580475 91.56%
-  );
-  opacity: 0.7;
-  cursor: not-allowed;
-}
-
-#rememberme:checked + label {
-  background: linear-gradient(to bottom, #7cc1f3, #d27eef);
-  border: none;
-}
-
-#rememberme:checked + label + label {
-  color: white;
-}
-
-#rememberme:not(:checked) + label + label {
-  color: transparent;
-}
-
-#world-heading {
-  position: relative;
-  background: linear-gradient(
-    180deg,
-    rgba(255, 245, 0, 1) 48.5%,
-    rgba(153, 238, 45, 1) 93.5%
-  );
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 150px;
-  font-weight: 700;
-  line-height: 100%;
-  letter-spacing: 22.5px;
-}
-
-#temp {
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-
-  font-size: 150px;
-  font-weight: 700;
-  line-height: 100%;
-  letter-spacing: 22.5px;
-}
-
-#temp span {
-  -webkit-text-stroke: 2px #9dee1f;
-  -webkit-text-fill-color: transparent;
-}
-
-/* CSS for modal animations */
-.modal-hidden {
-  display: none;
-}
-
-.modal-visible {
-  display: flex;
-}
-
-.modal-transition {
-  transition: opacity 0.3s ease, transform 0.3s ease;
-}
-
-.modal-enter {
-  opacity: 0;
-  transform: scale(0.9);
-}
-
-.modal-enter-active {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.modal-exit {
-  opacity: 1;
-  transform: scale(1);
-}
-
-.modal-exit-active {
-  opacity: 0;
-  transform: scale(0.9);
-}
-
-.overlay-hidden {
-  display: none;
-}
-
-.overlay-visible {
-  display: flex;
-}
-
-.overlay-transition {
-  transition: opacity 0.3s ease;
-}
-
-.overlay-enter {
-  opacity: 0;
-}
-
-.overlay-enter-active {
-  opacity: 1;
-}
-
-.overlay-exit {
-  opacity: 1;
-}
-
-.overlay-exit-active {
-  opacity: 0;
-}
-
